<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.saisreenivas.inputcontrols.dogorcatperson.MainActivity"
    android:background="@android:color/holo_red_light">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/scrollView"
        android:background="@android:color/holo_blue_light">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fenines_data"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:id="@+id/radioGroupFenine"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_true"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_false"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comfortable"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:id="@+id/seekBar"
                android:padding="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarValue"
                android:text="@string/confortableness_data"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_gravity="center_horizontal|center"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:text="@string/cutest_data"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dogCheck"
                android:text="@string/dog_name"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:id="@+id/catCheck"
                android:layout_height="wrap_content"
                android:text="@string/cat_name"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:id="@+id/parrotCheck"
                android:layout_height="wrap_content"
                android:text="@string/parrot_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drool_data"
                android:paddingLeft="10dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:id="@+id/radioGroupDrool"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_true"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_false"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_centerHorizontal="true"
        android:id="@+id/resultBtn"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@id/scrollView"/>

</RelativeLayout>
